los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/LOS_Box_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Non-secret Box settings for the LOS token service and governed loan actions: CCG subject, folder allowlist, credit policy Hub, loans root and commitment-letter template. The Box client id and secret live in the LOS_Box external credential.</description>
    <label>LOS Box Config</label>
</CustomObject>