los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/fields/Allowed_Folder_Ids__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Folder_Ids__c</fullName>
    <label>Allowed Folder Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>