los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/fields/Borrower_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Portal_URL__c</fullName>
    <description>HTTPS my.site.com workspace base URL used for Box Sign completion redirects. Set per environment; loan and mapped folder identifiers are appended by the server.</description>
    <label>Borrower Portal URL</label>
    <type>Url</type>
</CustomField>