los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/fields/Commitment_Letter_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Letter_Template_ID__c</fullName>
    <description>Box file ID of the registered Doc Gen template for the commitment letter. Configuration rather than a caller argument, like the credit policy Hub: the agent may draft the letter, but not choose which template the bank generates from.</description>
    <inlineHelpText>Box file ID of the commitment-letter Doc Gen template. Set per environment; not stored in source.</inlineHelpText>
    <label>Commitment Letter Template ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>