los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/fields/Credit_Policy_Hub_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Policy_Hub_Id__c</fullName>
    <description>Box Hub ID of the approved credit policy library. Configuration rather than a caller argument: the agent may read the policy, but it may not name which policy library to read.</description>
    <inlineHelpText>Box Hub ID for the credit policy library. Set per environment; not stored in source.</inlineHelpText>
    <label>Credit Policy Hub ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>