los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/fields/Enterprise_Id__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Id__c</fullName>
    <label>Enterprise Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>