los-salesforce-project/force-app/main/default/objects/LOS_Box_Config__c/fields/Loans_Root_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Loans_Root_Folder_Id__c</fullName>
    <description>Box folder ID that contains every governed loan folder. Configuration rather than a caller argument: a portfolio search has to be bounded, and Box metadata search is enterprise-wide, so unscoped it also returns files from earlier demo environments.</description>
    <inlineHelpText>Box folder ID of the loans root. Set per environment; not stored in source.</inlineHelpText>
    <label>Loans Root Folder ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>